# internal/router/horse.go
@@ -3,17 +3,16 @@ package router
 import (
 	"github.com/gorilla/mux"
 	"wildwest/internal/handler"
+	"wildwest/internal/middleware"
+	"wildwest/pkg/settings"
 )
 
-func NewHorseRouter(router *mux.Router, horseHandler handler.HorseHandler) {
+func NewHorseRouter(router *mux.Router, horseHandler handler.HorseHandler, cfg *settings.Config) {
 	horseRouter := router.PathPrefix("/horse").Subrouter()
 
-	// GET endpoint for retrieving horse record by user_id
-	horseRouter.HandleFunc("/{user_id}", horseHandler.GetHorse).Methods("GET")
+	horseRouter.Use(middleware.AuthMiddleware(cfg))
 
-	// GET endpoint for upgrade horse level by user_id
-	horseRouter.HandleFunc("/upgrade/{user_id}", horseHandler.UpgradeHorse).Methods("GET")
-
-	// POST endpoint to record the game result by user_id
-	horseRouter.HandleFunc("/finish/{user_id}", horseHandler.GameHorse).Methods("POST")
+	horseRouter.HandleFunc("", horseHandler.GetHorse).Methods("GET")
+	horseRouter.HandleFunc("/upgrade", horseHandler.UpgradeHorse).Methods("GET")
+	horseRouter.HandleFunc("/finish", horseHandler.GameHorse).Methods("POST")
 }
